AppInmobiliaria/force-app/main/default/objects/Cruce__c/Cruce__c.object-meta.xml
<CustomObject>
    <label>Cruce</label>
    <nameField>
        <displayFormat>CRU-{0000}</displayFormat>
        <label>Ref Cruce</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cruces</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>