AppInmobiliaria/force-app/main/default/objects/Cruce__c/fields/Ascensor_Buscado__c.field-meta.xml
<CustomField>
    <fullName>Ascensor_Buscado__c</fullName>
    <formula>Demanda__r.Imprescindible_Ascensor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ascensor Imprescindible Cliente</label>
    <type>Checkbox</type>
</CustomField>