AppInmobiliaria/force-app/main/default/objects/Cruce__c/fields/Ascensor_Inmueble__c.field-meta.xml
<CustomField>
    <fullName>Ascensor_Inmueble__c</fullName>
    <formula>Encargo__r.Inmueble_Asociado__r.Tiene_Ascensor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ascensor Inmueble</label>
    <type>Checkbox</type>
</CustomField>