AppInmobiliaria/force-app/main/default/objects/Cruce__c/fields/Banos_Buscados__c.field-meta.xml
<CustomField>
    <fullName>Banos_Buscados__c</fullName>
    <formula>Demanda__r.Banos_Minimos__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Baños Mínimos Cliente</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>