AppInmobiliaria/force-app/main/default/objects/Cruce__c/fields/Banos_Inmueble__c.field-meta.xml
<CustomField>
    <fullName>Banos_Inmueble__c</fullName>
    <formula>Encargo__r.Inmueble_Asociado__r.Banos__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Baños Inmueble</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>