AppInmobiliaria/force-app/main/default/objects/Cruce__c/fields/Cliente_Interesado__c.field-meta.xml
<CustomField>
    <fullName>Cliente_Interesado__c</fullName>
    <formula>Demanda__r.Nombre_del_Interesado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cliente Interesado</label>
    <type>Text</type>
</CustomField>