AppInmobiliaria/force-app/main/default/objects/Cruce__c/fields/Cliente_Propietario__c.field-meta.xml
<CustomField>
    <fullName>Cliente_Propietario__c</fullName>
    <formula>Encargo__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cliente Propietario</label>
    <type>Text</type>
</CustomField>