AppInmobiliaria/force-app/main/default/objects/Cruce__c/fields/Comentarios_Cruce__c.field-meta.xml
<CustomField>
    <fullName>Comentarios_Cruce__c</fullName>
    <label>Comentarios</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>