AppInmobiliaria/force-app/main/default/objects/Cruce__c/fields/Demanda__c.field-meta.xml
<CustomField>
    <fullName>Demanda__c</fullName>
    <label>Demanda</label>
    <referenceTo>Demanda__c</referenceTo>
    <relationshipLabel>Cruces (Propuestas recibidas)</relationshipLabel>
    <relationshipName>Cruces</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>