AppInmobiliaria/force-app/main/default/objects/Cruce__c/fields/Encargo__c.field-meta.xml
<CustomField>
    <fullName>Encargo__c</fullName>
    <label>Encargo</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Cruces (Demandas sugeridas)</relationshipLabel>
    <relationshipName>Cruces</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>