AppInmobiliaria/force-app/main/default/objects/Cruce__c/fields/Habitaciones_Buscadas__c.field-meta.xml
<CustomField>
    <fullName>Habitaciones_Buscadas__c</fullName>
    <formula>Demanda__r.Habitaciones_Minimas__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Habitaciones Mínimas Cliente</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>