AppInmobiliaria/force-app/main/default/objects/Cruce__c/fields/Metros_Buscados__c.field-meta.xml
<CustomField>
    <fullName>Metros_Buscados__c</fullName>
    <formula>Demanda__r.Metros_Minimos__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Metros Mínimos Cliente</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>