AppInmobiliaria/force-app/main/default/objects/Cruce__c/fields/Precio_Inmueble__c.field-meta.xml
<CustomField>
    <fullName>Precio_Inmueble__c</fullName>
    <formula>Encargo__r.Precio_Salida__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio Inmueble</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>