AppInmobiliaria/force-app/main/default/objects/Cruce__c/fields/Presupuesto_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Presupuesto_Cliente__c</fullName>
    <formula>Demanda__r.Presupuesto_Maximo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Presupuesto Máximo Cliente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>