AppInmobiliaria/force-app/main/default/objects/Cruce__c/fields/Provincia_Buscada__c.field-meta.xml
<CustomField>
    <fullName>Provincia_Buscada__c</fullName>
    <formula>TEXT(Demanda__r.Provincia_Deseada__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provincia Cliente</label>
    <type>Text</type>
</CustomField>