AppInmobiliaria/force-app/main/default/objects/Cruce__c/fields/Provincia_Inmueble__c.field-meta.xml
<CustomField>
    <fullName>Provincia_Inmueble__c</fullName>
    <formula>TEXT(Encargo__r.Inmueble_Asociado__r.Provincia__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provincia Inmueble</label>
    <type>Text</type>
</CustomField>